--- a/src/IdentityTutorial.Web/Views/Home/Index.cshtml
+++ b/src/IdentityTutorial.Web/Views/Home/Index.cshtml
@@ -2,7 +2,7 @@
     ViewBag.Title = "Home Page";
 }
 
-<div id="myCarousel" class="carousel slide" data-ride="carousel" data-interval="6000">
+<div id="myCarousel" class="carousel slide" data-ride="carousel" data-interval="5000">
     <ol class="carousel-indicators">
         <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
         <li data-target="#myCarousel" data-slide-to="1"></li>
@@ -21,7 +21,7 @@
         </div>
         <div class="item">
             <div class="color-banner wisteria">
-                <span>Read it here <span class="glyphicon glyphicon-book"></span></span>
+                <span>Read it <a href="https://github.com/EliotJones/IdentityTutorial" style="color: #FFF; text-decoration: underline;" target="_blank" title="Code repository on GitHub">here</a> <span class="glyphicon glyphicon-book"></span></span>
             </div>
         </div>
     </div>
@@ -30,7 +30,7 @@
 <div class="row">
     <div class="col-md-12">
         <h2>Identity tutorial</h2>
-        <p class="lead">This site is running the tutorial code hosted on Github for a Core CLR, MVC 6 and Identity 3.0 system.</p>
+        <p class="lead">This site is running the tutorial code hosted <a href="https://github.com/EliotJones/IdentityTutorial" target="_blank" title="Code repository on GitHub">on Github</a> for a Core CLR, MVC 6 and Identity 3.0 system.</p>
         <p>The site currently supports:</p>
         <ul>
             <li>Registration</li>
@@ -44,15 +44,17 @@
     .color-banner {
         width: 100%;
         height: 360px;
+        display: table;
     }
 
     .color-banner > span {
         color: white;
-        line-height: 360px;
         width: 100%;
-        display: block;
+        display: table-cell;
         text-align: center;
+        vertical-align: middle;
         font-size: 2.6em;
+        height: 360px;
     }
 
     .green-sea {
