--- a/src/IdentityTutorial.Web/Views/Shared/_Layout.cshtml
+++ b/src/IdentityTutorial.Web/Views/Shared/_Layout.cshtml
@@ -1,4 +1,6 @@
-﻿@inject IOptions<AppSettings> AppSettings
+﻿@using System.Threading.Tasks
+@using Microsoft.Framework.OptionsModel
+@inject IOptions<AppSettings> AppSettings
 <!DOCTYPE html>
 <html>
 <head>
@@ -12,7 +14,7 @@
         <link rel="stylesheet" href="~/css/site.css" />
     </environment>
     <environment names="Staging,Production">
-        <link rel="stylesheet" href="//ajax.aspnetcdn.com/ajax/bootstrap/3.0.0/css/bootstrap.min.css"
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css"
               asp-fallback-href="~/lib/bootstrap/css/bootstrap.min.css"
               asp-fallback-test-class="hidden" asp-fallback-test-property="visibility" asp-fallback-test-value="hidden" />
         <link rel="stylesheet" href="//ajax.aspnetcdn.com/ajax/bootstrap-touch-carousel/0.8.0/css/bootstrap-touch-carousel.css"
