--- a/src/IdentityTutorial.Web/Views/Shared/_Layout.cshtml
+++ b/src/IdentityTutorial.Web/Views/Shared/_Layout.cshtml
@@ -51,6 +51,10 @@
                         <li><a asp-controller="Account" asp-action="Register">Register</a></li>
                         <li><a asp-controller="Account" asp-action="Login">Sign in</a></li>
                     }
+                    else
+                    {
+                        <li><a asp-controller="Home" asp-action="About">About</a></li>
+                    }
                 </ul>
 
                 @if (User.Identity.IsAuthenticated)
